--- a/frontend/src/components/components.css
+++ b/frontend/src/components/components.css
@@ -16,7 +16,7 @@
     /* IDE Container */
 .ide-container {
     display: flex;
-    width: 80%;
+    width: 94.5%;
     flex-direction: column;
     padding: 20px;
     background-color: #f5f5f5;
@@ -187,17 +187,12 @@
   }
   
 
-  .video-player {
-    width: 70%;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .video {
-    width: 800px; /* Adjust the width as desired */
-    height: auto;
-  }
-  
+.video-player {
+  width: 200px; /* Adjust the width as per your preference */
+  margin: 0 auto; /* Center the video player horizontally */
+  display: flex;
+  justify-content: center;
+}
 
   .header {
   display: flex;
@@ -358,3 +353,68 @@
   line-height: 1.5;
   /* Add any other styles as needed */
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* Two equal-width columns */
+  grid-gap: 20px; /* Gap between grid items */
+}
+
+.grid-item-left {
+  width: 100%; /* Components within this column will take 100% width */
+}
+
+.grid-item-right {
+  width: 100%; /* Components within this column will take 100% width */
+}
+.hero {
+  position: relative;
+  height: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: #000;
+  font-size: 2rem;
+}
+
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: url('https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/267_Python-512.png') no-repeat center center;
+  opacity: 0.5; /* Set the background image opacity */
+}
+
+.hero h2 {
+  color: #000; /* Set text color to black */
+}
+
+.hero p {
+  color: #000;
+}
+
+.hero-content {
+  z-index: 1;
+}
+
+
+  .cta {
+    background-color: #4CAF50;
+    color: #fff;
+    padding: 2rem;
+    text-align: center;
+  }
+
+  .features {
+    display: flex;
+    justify-content: space-around;
+    margin: 2rem 0;
+  }
+
+  .feature {
+    text-align: center;
+  }
