--- a/frontend/src/components/components.css
+++ b/frontend/src/components/components.css
@@ -328,9 +328,23 @@
   text-align: center;
 }
 
+/* components.css */
+
 .profile-container {
-  /* Your styles for the profile container */
+  display: flex;
+  /*flex-direction: column;*/
+  align-items: flex-start;
 }
+
+.profile-picture {
+  max-width: 400px; /* Set maximum width for responsiveness */
+  height: auto; /* Maintain aspect ratio */
+  border-radius: 50%; /* Optional: Make the picture round */
+  margin-right: 20px; /* Add spacing between picture and text */
+}
+
+/* Rest of your CSS styles */
+
 
 .profile-grid {
   display: grid;
@@ -379,7 +393,7 @@
   color: #555;
 }
 
-ul.lessons-list {
+ol.lessons-list {
   list-style: none;
   padding: 0;
   margin: 0;
