--- a/frontend/src/components/components.css
+++ b/frontend/src/components/components.css
@@ -61,8 +61,10 @@
 
 .navbar {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between; /* Adjust alignment as needed */
   align-items: center;
+  padding: 10px 20px; /* Optional: Add padding for space around the items */
+  background-color: #333; /* Set background color */
 }
 
 .nav-list {
@@ -70,10 +72,14 @@
   margin: 0;
   padding: 0;
   display: flex;
+  flex-wrap: wrap; /* Allow items to wrap to the next line on smaller screens */
+  gap: 20px; /* Adjust the gap between items */
 }
 
 .nav-item {
-  margin-right: 20px;
+  /* Optional: Set specific width or use flex: 1 to distribute items evenly */
+  /* width: 100px; */
+  /* flex: 1; */
 }
 
 .nav-link {
@@ -81,11 +87,13 @@
   text-decoration: none;
   font-size: 16px;
   font-weight: bold;
+  transition: text-decoration 0.3s ease; /* Add smooth underline transition */
 }
 
 .nav-link:hover {
   text-decoration: underline;
 }
+
 
 .video-player {
   max-width: 100%; /* Set a maximum width for the video player */
@@ -321,8 +329,11 @@
 
 .feature {
   text-align: center;
-  max-width: 300px;
-  color: #3d3e41;
+  max-width: 30%; /* Adjust the maximum width as per your design */
+  /*padding: 2rem; !* Add padding for spacing *!*/
+  /*background-color: #f9f9f9; !* Light background color for features *!*/
+  /*border-radius: 10px; !* Optional: Add rounded corners *!*/
+  /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); !* Optional: Add box shadow for depth *!*/
 }
 
 .feature h3 {
